added kubearmor policy

--- a/infra-tool-gitops/external-secret-operator/external-secret.yaml
+++ b/infra-tool-gitops/external-secret-operator/external-secret.yaml
@@ -9,12 +9,12 @@ spec:
     kind: ClusterSecretStore
   
   target:
-    name: nginx-credentials
+    name: nginx-credentials # Kubernetes Secret Name
 
   data:
   - remoteRef:
-      key: nginx-password
-      property: password 
-    secretKey: nginx-pod-password
+      key: nginx-password # AWS Secret Manager Secret Name
+      property: password # AWS Secret Manager Secret Key
+    secretKey: nginx-pod-password # Kubernetes Secret Key
 
 
