ingress blocker and externaldns resolved

--- a/infra-tool-gitops/aws-lb-controller/example/ingress.yaml
+++ b/infra-tool-gitops/aws-lb-controller/example/ingress.yaml
@@ -11,7 +11,8 @@ metadata:
     alb.ingress.kubernetes.io/ssl-redirect: "443"
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/healthcheck-path: /health
+    # alb.ingress.kubernetes.io/healthcheck-path: /health
+    alb.ingress.kubernetes.io/group.name: shared-alb
 spec:
   ingressClassName: alb
   rules:
