external secret blocker resolved

--- a/infra-tool-gitops/external-secret-operator/cluster-secret-store.yaml
+++ b/infra-tool-gitops/external-secret-operator/cluster-secret-store.yaml
@@ -10,4 +10,4 @@ spec:
       auth:
         jwt:
           serviceAccountRef:
-            name: externalsecrets-sa
+            name: external-secret-sa
