--- a/infra-tool-gitops/external-secret-operator/external-secret.yaml
+++ b/infra-tool-gitops/external-secret-operator/external-secret.yaml
@@ -12,9 +12,10 @@ spec:
     name: nginx-credentials # Kubernetes Secret Name
 
   data:
-  - remoteRef:
+  - secretKey: nginx-pod-password # Kubernetes Secret Key
+    remoteRef:
       key: nginx-password # AWS Secret Manager Secret Name
       property: password # AWS Secret Manager Secret Key
-    secretKey: nginx-pod-password # Kubernetes Secret Key
+    
 
 
