--- a/infra-tool-gitops/external-secret-operator/external-secret.yaml
+++ b/infra-tool-gitops/external-secret-operator/external-secret.yaml
@@ -2,11 +2,12 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: nginx-secret
+  namespace: external-secret
 spec:
   refreshInterval: "5m"
   secretStoreRef:
     name: aws-secret-store
-    kind: ClusterSecretStore
+    kind: SecretStore
   
   target:
     name: nginx-credentials # Kubernetes Secret Name
@@ -17,5 +18,4 @@ spec:
       key: nginx-password # AWS Secret Manager Secret Name
       property: password # AWS Secret Manager Secret Key
     
-
 
