--- a/infra-tool-gitops/external-secret-operator/cluster-secret-store.yaml
+++ b/infra-tool-gitops/external-secret-operator/cluster-secret-store.yaml
@@ -1,13 +1,10 @@
 apiVersion: external-secrets.io/v1beta1
-kind: ClusterSecretStore
+kind: SecretStore
 metadata:
   name: aws-secret-store
+  namespace: external-secret
 spec:
   provider:
     aws:
       service: SecretsManager
       region: us-east-1
-      auth:
-        jwt:
-          serviceAccountRef:
-            name: external-secret-sa
