--- a/infra-tool-gitops/external-secret-operator/nginx.yaml
+++ b/infra-tool-gitops/external-secret-operator/nginx.yaml
@@ -3,7 +3,8 @@ kind: Pod
 metadata:
   labels:
     app: nginx-web
-  name: nginx-secrets
+  name: nginx
+  namespace: external-secret
 spec:
   containers:
   - image: nginx
@@ -24,6 +25,7 @@ metadata:
   labels:
     app: nginx
   name: nginx-web
+  namespace: external-secret
 spec:
   ports:
   - port: 80
