--- a/infra-tool-gitops/kubearmor/kubearmorpolicy.yaml
+++ b/infra-tool-gitops/kubearmor/kubearmorpolicy.yaml
@@ -2,6 +2,7 @@ apiVersion: security.kubearmor.com/v1
 kind: KubeArmorPolicy
 metadata:
   name: nginx-secret
+  namespace: external-secret
 spec:
   selector:
     matchLabels:
